# madoguchi

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  rustfmt.toml  sqlx-data.json
.devcontainer/: .env  Dockerfile
.github/workflows/: docker-publish.yml  rust-clippy.yml
.sqlx/: query-00dab320ddee5214ef3a8f0c2829917cb440ee43ab722899f4611ec4b7311d71.json  query-1f599c52ed6c3d7a363c84ee989839ffbf1bb5d8207f623bb3cb1b18dff936a6.json  query-23446e4fc7f619fb697695137049b7f94611a288af3ff42959dcb81551d52b25.json  query-24890d793044181e51a7af3736ed12f972ac0c069e1f6b373e64b65a4b9c9ea6.json  query-4807caa7cbce5af51d17763784298ba48310f4812eda8b8958fb6d6cf9db250a.json  query-48eb467736936f86ce7271ae3044c259611a5e126c659d5bcb5334ac8ed7965b.json  query-52bb098036e0c35521b3361ae1d1949c61788b84e7a271b1565ff08953057a7a.json  query-567086729fc148c5c4ec75a05595d9038d322473b947983293b45cad5f85099a.json  query-61834372f93122c5f12c6d984d0520780d8c5c7212ef5f4c0ee338fdb039082e.json  query-6c3ea4411d780250e7e88966259c81722558dc09cd2a17073c72e3ddb3e78cdb.json  query-6db2f63878925a8d75ba60e46b3824ccf29213b8f2e188f4d7274df62a1967bc.json  query-795b6d18692a9b1612be571568a0849ee6e3302d46b8f755d6005788142884f8.json  query-9028ebda5a05c2cd45d7cddac28a6a0c597a41baa1e9b2792458d57f52d55408.json  query-95cd579bd61bc744836d0c942420241416396842998022440ff50b3d80615059.json  query-a94fbc7f6195e4168dbe27ab36949f2d0b4444e8e5e43df02eb84e193f087563.json  query-b3ca0af017101ebd1f208a55d74d703d010406f18365c31437aedbf9fd210c09.json  query-b93c40e24a5add5cc7a4b9c4f599577c641b8c5cefb4674f01fc88b7ff2f1538.json  query-c4f9d3576ebf27618bac5683d11212b732fd76bb49dcb0d54e1c2dfafee229d1.json  query-c51b17973fa1485423b5881af6eb9fd9ac774aac325a0b5005f7f28ec7f7e3ab.json  query-c57957289e1854fd4f5adc6cd0477cd0bbfae78a38477dd4a65c414d5a176e2e.json  query-dc0a9ad5b6c33935b63804ed4af2d5e495301adf5a1f0fa88691d64951177ece.json  query-e42436fb9d2194333adc20c8ad0a2c347fcf9c53c5f6da480bd72fe27b5e2ab9.json  query-f2c6db4873b35819782bbe8c9b109210a0c6d3efcc7cc0c2dc72b3341c4e8570.json  query-f90150a038e955d1be861d353de2cff0c7723b7b369f729f332fde7b5d10a67f.json
migrations/: 20230213103718_initial-tables.sql  20230214150055_fix-not-null.sql  20230216105656_rename-builds-link-to-runid.sql  20230216150937_table-builds-remake-id.sql  20230407121212_builds-add-succ.sql  20230407161240_separate-ver-rel.sql  20230408154039_succ-not-null.sql  20230411054105_build-no-prikey.sql  20240714141343_build-commit.sql
src/: db.rs  main.rs  repopkgs_parse.rs  utils.rs
src/api/: api.rs  auth.rs  ci.rs  ci5.rs  manual.rs  mod.rs  repology.rs  repopkgs.rs  v4.rs
xtask/: Cargo.toml
xtask/src/: main.rs
