[workspace]
members = ["xtask"]

[package]
name = "madoguchi"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-logfmt = "0.3.5"
anda-config = "0.4.13"
webhook = "2.1.2"

[dependencies.sqlx]
version = "0.7.4"
features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "time",
    "macros",
    "json",
]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter", "tracing-log"]

[dependencies.reqwest]
version = "0.12.20"
default-features = false
features = ["json", "native-tls"]

[dependencies.jwt-simple]
version = "0.12.12"
default-features = false
features = ["pure-rust"]
