[workspace]
members = ["xtask"]

[package]
name = "madoguchi"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-logfmt = "0.3.5"
anda-config = "0.4.13"
webhook = "2.1.2"

[dependencies.sqlx]
version = "0.8.1"
features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "time",
    "macros",
    "json",
]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter", "tracing-log"]

[dependencies.reqwest]
version = "0.12.20"
default-features = false
features = ["json", "native-tls"]

[dependencies.jwt-simple]
version = "0.12.12"
default-features = false
features = ["pure-rust"]

[lints.clippy]
# cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

# arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
# indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "allow" # rocket bug
let_underscore_untyped = "warn"
# multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "allow"     # rocket bug
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
